# src/app/server-status/server-status.router.ts
@@ -1,21 +1,21 @@
-import { Controller, Get, Route, Tags } from 'tsoa';
-import { getRoutes } from './server.status.service';
+// import { Controller, Get, Route, Tags } from 'tsoa';
+// import { getRoutes } from './server.status.service';
 
-@Tags('Server Status')
-@Route('/api/server-status')
-export class ServerStatusController extends Controller {
+// @Tags('Server Status')
+// @Route('/api/server-status')
+// export class ServerStatusController extends Controller {
 
-  @Get('/')
-  public async getServerStatus(): Promise<{ status: string, serverTime: string }> {
-    return {
-      "status": "server is running",
-      "serverTime": new Date().toISOString()
-    }
-  }
+//   @Get('/')
+//   public async getServerStatus(): Promise<{ status: string, serverTime: string }> {
+//     return {
+//       "status": "server is running",
+//       "serverTime": new Date().toISOString()
+//     }
+//   }
 
-  @Get('/routes')
-  public async getServerRoutes(): Promise<any> {
-    return getRoutes()
-  }
+//   @Get('/routes')
+//   public async getServerRoutes(): Promise<any> {
+//     return getRoutes()
+//   }
 
-}
+// }
